# dictatord

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  install.sh  uninstall.sh
.github/workflows/: ci.yml  release.yml
config/: default.toml
src/: asr.rs  audio.rs  config.rs  feedback.rs  hotkey.rs  ipc.rs  main.rs  output.rs  settings.rs
src/visual/: mod.rs  render.rs  window.rs
systemd/: dictatord.service
